[gd_scene load_steps=2 format=3 uid="uid://3et0tj88k3vy"]

[ext_resource type="Script" path="res://examples/server_client/server_client.gd" id="1_k0lsr"]

[node name="ServerClient" type="Node2D"]
script = ExtResource("1_k0lsr")

[node name="Label" type="Label" parent="."]
offset_left = 234.0
offset_top = 183.0
offset_right = 284.0
offset_bottom = 206.0
text = "Server"

[node name="Label2" type="Label" parent="."]
offset_left = 851.0
offset_top = 191.0
offset_right = 923.0
offset_bottom = 214.0
text = "Client"

[node name="start_server" type="Button" parent="."]
offset_left = 211.0
offset_top = 228.0
offset_right = 311.0
offset_bottom = 259.0
text = "Start Server"

[node name="start_client" type="Button" parent="."]
offset_left = 828.0
offset_top = 234.0
offset_right = 923.0
offset_bottom = 265.0
disabled = true
text = "Start Client"

[node name="server_roomid_edit" type="LineEdit" parent="."]
offset_left = 105.0
offset_top = 287.0
offset_right = 415.0
offset_bottom = 318.0
editable = false

[node name="Label3" type="Label" parent="."]
offset_left = 28.0
offset_top = 290.0
offset_right = 97.0
offset_bottom = 313.0
text = "Room id:"

[node name="Label4" type="Label" parent="."]
offset_left = 654.0
offset_top = 290.0
offset_right = 713.0
offset_bottom = 313.0
text = "Room id:"

[node name="client_roomid_edit" type="LineEdit" parent="."]
offset_left = 727.0
offset_top = 286.0
offset_right = 1034.0
offset_bottom = 317.0

[node name="logs" type="RichTextLabel" parent="."]
offset_left = 354.0
offset_top = 384.0
offset_right = 843.0
offset_bottom = 773.0
text = "
"

[connection signal="pressed" from="start_server" to="." method="_on_start_server_pressed"]
[connection signal="pressed" from="start_client" to="." method="_on_start_client_pressed"]
[connection signal="text_changed" from="client_roomid_edit" to="." method="_on_client_roomid_edit_text_changed"]
